--- a/style.css
+++ b/style.css
@@ -1,3 +1,227 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Bona+Nova:ital@1&family=Fraunces:opsz,wght@9..144,700&family=Inter:wght@400;500;700&family=Karla:wght@400;700&family=Montserrat:wght@500&family=Outfit:wght@100;800&family=Overpass:wght@400;700&family=Raleway:wght@400;700&family=Red+Hat+Display:wght@500;700;900&display=swap');
+
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+background-color: black;
+font-family: 'Karla', sans-serif;
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
+}
+
+main {
+  height: 100vh;
+  width: 100%;
+  margin: auto;
+  background-color: hsl(204, 43%, 93%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.container{
+    height: 68%;
+    max-width: 45%;
+    box-shadow: 10px 10px 5px rgba(100, 147, 147, 0.068)
+    /* rgba(255, 255, 255, 0.014); */
+
     
 }
+
+.first-container{
+    background-color: white;
+    height: 45%;
+    border-radius: .5rem .5rem 0 0 ;
+    padding:  2rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+    
+}
+
+.two-containers{
+    display: flex;
+    height: 55%;
+
+}
+
+.second-container{
+    background-color: hsl(179, 62%, 43%);
+    width: 50%;
+    border-radius:  0 0 0 .5rem;
+    padding: 2.4rem;
+    display: flex;
+    flex-direction: column;
+    row-gp: 1.5rem;
+    justify-content: space-between;
+}
+
+.third-container{
+    background-color: hsl(179, 62%, 47%);
+    width: 50%;
+    border-radius:  0 0 .5rem 0;
+    padding: 2.4rem ;
+    display: flex;
+    flex-direction: column;
+    row-gap: .9rem;
+}
+
+.first-container > h3 {
+    color: hsl(179, 62%, 43%);
+    font-weight: 700;
+}
+
+.first-container > div > h4{
+    color: hsl(71, 73%, 54%);
+    font-weight: 700;
+    font-size: 1rem;
+}
+
+.first-container > div > p {
+    color: hsl(218, 22%, 67%);
+    font-size: .9rem;
+    line-height: 1.4rem;
+}
+
+.first-container > div {
+    display: flex;
+    flex-direction: column;
+    row-gap: .6rem;
+}
+
+
+.second-container > h3 {
+    color: hsl(204, 43%, 93%);
+    font-size: 1rem;
+}
+
+.second-container > div > div > h2 {
+    color: white;
+    font-weight: 700;
+    font-size: 1.7rem;
+}
+
+.second-container > div > div > span {
+    color: hsla(203, 44%, 93%, 0.498);
+    font-weight: 400;
+    font-size: .8rem;
+}
+
+.second-container > div{
+    display: flex;
+    flex-direction: column;
+    row-gap: .5rem;
+}
+
+
+.second-container > div > div{
+    display: flex;
+    column-gap: .8rem;
+    align-items: center;
+}
+
+
+.second-container > div > p {
+    color: hsl(204, 43%, 93%);
+    font-size: .8rem;
+    
+}
+
+.second-container > button {
+    background-color: hsl(71, 73%, 54%);
+    border: none;
+    outline: none;
+    color: rgba(245, 245, 245, 0.692);
+    border-radius: .5rem;
+    padding: .8rem;
+    width: 100%;
+    font-weight: 700;
+    font-size: .8rem;
+    
+}
+
+.third-container > h3 {
+    color: hsl(204, 43%, 93%);
+}
+
+ul{
+    list-style: none;
+    color: hsla(203, 44%, 93%, 0.687);
+    font-weight: 400;
+    font-size: .75rem;
+    line-height: 1rem;
+}
+
+
+@media (max-width: 800px){
+    main{
+        
+        margin: auto;
+        display: flex;
+  justify-content: center;
+  align-items: center;
+    }
+
+    .container{
+        display: flex;
+        flex-direction: column;
+        height: 90vh;
+        
+    max-width: 90%;
+        
+    }
+
+    .first-container{
+        height: 38%;
+        width: 100%;
+    }
+
+    .second-container{
+        padding: 2rem;
+        height: 60%;
+width: 100%;
+border-radius: 0 0;
+    }
+
+    .third-container{
+        height: 60%;
+        width: 100%;
+        padding: 2rem;
+        border-radius: 0 0 .4rem .4rem;
+
+    }
+
+    .two-containers{
+        display: flex;
+        flex-direction: column;
+        height: 62%;
+        row-gap: 0;
+    background-color: hsl(204, 43%, 93%);
+    }
+
+    ul{
+        line-height: 1.15rem;
+    }
+}    
+
+
+
+
+
+/* Cyan: hsl(179, 62%, 43%)
+- Bright Yellow: hsl(71, 73%, 54%)
+
+### Neutral
+
+- Light Gray: hsl(204, 43%, 93%)
+- Grayish Blue: hsl(218, 22%, 67%) */
